<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_character_edit_name">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/et_character_edit_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:hint="@string/hint_character_edit_summary">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/et_character_edit_summary"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minLines="2"
				android:inputType="textMultiLine" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:hint="@string/hint_character_edit_detail">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/et_character_edit_detail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minLines="4"
				android:gravity="top|start"
				android:inputType="textMultiLine" />
		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>
</ScrollView>

